welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:8: error: type mismatch;
 found   : Unit
 required: String
	if ( a%5==0) {
        ^