welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	if ( a%5==0 && a%3==0 ) {
		"Fizz Buzz"
	}
	if ( a%3==0) {
		"Fizz"
	}
	if ( a%5==0) {
		"Buzz"
	}
}
